tests/bigint/invalid03.js
const invalid_decimal = 1.0n; // error
